# wio-terminal-azure-rtos

./: .clang-format  .gitmodules  README.md
cmake/: arm-gcc-cortex-m4.cmake  arm-gcc-cortex-toolchain.cmake  utilities.cmake  variables.cmake
src/samples/threadx_demo/: CMakeLists.txt  main.c
src/startup/: tx_initialize_low_level.S
